clusters/folly/apps/smiirl/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smiirl
  labels:
    app.kubernetes.io/name: smiirl
    app.kubernetes.io/part-of: smiirl
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
